# audiobase

./: Makefile.in  Next.txt  README.md  configure  configure.in
src/: ABaseconf.c  ABaseconfig.c  ABaseconfig.h  ABased.c  ABaselog.c  ABaselog.h  ABasemod.c  ABasemod.h  ABasetools.c  ABasetools.h  MANUAL.txt  Makefile.am  Makefile.in  charConv.c  config.h  cr  crbrw  crlcd  crmpd  globalDef.h  libmpdclient.c  libmpdclient.h  lirc_client.c  lirc_client.c_v7  lirc_client.lo  menu-prototype.men  menu-prototype.men.bak  mod_browser.c  mod_browser.h  mod_debug.c  mod_debug.h  mod_lcdproc.c  mod_lcdproc.h  mod_lirc.c  mod_lirc.h  mod_mpd.c  mod_mpd.c_  mod_mpd.h  mod_mpd.h_  modules.inc  (+3 more)
