bin_PROGRAMS = abase05
abase05_SOURCES = ABaseconfig.c ABaseconfig.h ABased.c ABaselog.c ABaselog.h \
	ABasemod.c ABasemod.h ABasetools.c ABasetools.h config.h globalDef.h \
	libmpdclient.c libmpdclient.h lirc_client.c lirc_client.h MANUAL.txt mod_browser.c \
	mod_browser.h mod_debug.c mod_debug.h mod_lcdproc.c mod_lcdproc.h mod_lirc.c \
	mod_lirc.h mod_mpd.c mod_mpd.h modules.inc charConv.c charConv.h util.c util.h

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
abase05_LDFLAGS = $(all_libraries) 
